@@ -1,0 +1,4 @@
+require 'mkmf'
+
+create_makefile("simple_hash")
+
